# tau-lang

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  Dockerfile  LICENSE.md  LICENSE.txt  Makefile  NOTICE.txt  README.md  REWRITING_DAG.md  TASKS.md  anf.h  ba.h  babdd.h  barr.h  bdd_handle.h  benchmark.sh  bf.h  bool.h  build.sh  builder.h  clause.h  clauses.h  clean.sh  coverage.sh  defs.h  dev  dict.cpp  dict.h  echo  fof.h  minterm.h  msba.h  normalizer.h  nso.h  (+19 more)
bindings/python/: CMakeLists.txt  pyproject.toml  tau_lang.py  tau_lang_c_api.cpp  tau_lang_c_api.h
src/: CMakeLists.txt  README.txt  algorithm_a_skeleton.h  algorithm_b_skeleton.h  algorithm_c_skeleton.h  algorithm_d_game.h  algorithm_picker.h  anf.h  api.h  api.tmpl.h  api.tmpl.htref.h  api.tmpl.measuring.h  api.tmpl.string.h  ba.h  ba_constants.h  ba_constants.tmpl.h  ba_provider.h  ba_type_traits.h  ba_types.h  ba_types.tmpl.h  ba_types_checker_and_propagator.h  ba_types_checker_and_propagator.tmpl.h  ba_types_inference.h  ba_types_inference.tmpl.h  babdd.h  barr.h  base_ba_dispatcher.h  base_ba_dispatcher.tmpl.h  bdd_binding.h  bdd_handle.h  benchmarking.h  blockchain.h  bool.cpp  bool.h  bool_ba.cpp  bool_ba.h  bounded_cache.h  builder.h  builders.h  combinators.h  (+148 more)
src/base_bas/: cvc5.h  cvc5.tmpl.h  cvc5_widths.h  z3.h  z3.tmpl.h
src/boolean_algebras/: bitvector_ba.cpp  bitvector_ba.h  bitvector_ba.tmpl.h  bool_ba.cpp  bool_ba.h  bool_ba.tmpl.h  bv_ba.h  bv_ba.tmpl.h  bv_ba_advanced.tmpl.h  bv_ba_builders.tmpl.h  bv_ba_helpers.tmpl.h  bv_ba_hooks.tmpl.h  bv_ba_simplification.tmpl.h  bv_ba_solver.tmpl.h  bv_ba_widths.h  hsb.h  hsb.tmpl.h  hsb_node.h  hsb_normalizer.tmpl.h  hsb_splitter.tmpl.h  nlang_ba.cpp  nlang_ba.h  nso_ba.h  nso_ba.tmpl.h  product_ba.h  qint.cpp  qint.h  qint.tmpl.h  qlt.cpp  qlt.h  qlt.tmpl.h  sbf_ba.h  sbf_ba.tmpl.h  tau_ba.h  tau_ba.tmpl.h  variant_ba.h  z3_ba.cpp  z3_ba.h  z3_ba.tmpl.h
src/depreciating/: builders_depreciating.h  debug_helpers_depreciating.h  execution_depreciating.h  hooks_depreciating.h  hooks_depreciating.tmpl.h  interpreter_depreciating.h  interpreter_depreciating.tmpl.h  language_depreciating.h  language_depreciating.tmpl.h  main_depreciating.cpp  normal_forms_depreciating.h  normalizer_depreciating.h  nso_rr_depreciating.cpp  nso_rr_depreciating.h  queries_depreciating.h  repl_evaluator.tmpl_depreciating.h  repl_evaluator_depreciating.h  repl_evaluator_depreciating.tmpl.h  satisfiability_depreciating.h  solver_depreciating.h  solver_depreciating.tmpl.h  splitter_depreciating.h
src/experimental/: execution.h
src/heuristics/: ba_bv_custom_simplification.tmpl.h  ba_bv_cvc5_simplification.tmpl.h  ba_bv_simplification.h  bv_arithmetic_scan.h  bv_arithmetic_scan.tmpl.h  bv_ba_custom_simplification.tmpl.h  bv_ba_cvc5_simplification.tmpl.h  bv_ba_simplification.h  bv_bitblasting.h  bv_bitblasting.tmpl.h  bv_bitblasting_predicates.tmpl.h  bv_predicate_blasting.h  bv_predicate_blasting.tmpl.h  bv_predicate_blasting_arithmetic.tmpl.h  bv_predicate_blasting_comparisons.tmpl.h  bv_predicate_blasting_helpers.tmpl.h  bv_predicate_blasting_logic.tmpl.h  bv_predicate_blasting_predicates.tmpl.h  ex_subs_based_elimination.h  ex_subs_based_elimination.tmpl.h  simplify_using_equality.h  simplify_using_equality.tmpl.h  syntactic_path_simplification.h  syntactic_path_simplification.tmpl.h  trivial_skolem.h  trivial_skolem.tmpl.h
tests/: CMakeLists.txt  benchmark_listener.h  debug-bdd_binding.cpp  debug-tau_normalizer-bdd.cpp  debug-tau_normalizer-tau.cpp  debug_tau_normalizer.cpp  run_unit_tests.sh  test_Bool_helpers.h  test_ba.cpp  test_bindings.cpp  test_bool.cpp  test_builders.cpp  test_formula.cpp  test_hbdd.cpp  test_helpers.h  test_init.h  test_integration.cpp  test_integration_helpers.h  test_normalizer2.cpp  test_program.cpp  test_rewriting.cpp  test_rules-bf_execution.cpp  test_rules-bf_parsing.cpp  test_rules-cbf_execution.cpp  test_rules-cbf_parsing.cpp  test_rules-wff_execution.cpp  test_rules-wff_parsing.cpp  test_rules.cpp  test_sample.cpp  test_sbf_ba_helpers.h  test_tau_helpers.h  test_tau_parser.cpp  test_traversal.cpp  test_type_system.cpp
tests/api/: CMakeLists.txt  test_api-fixture.h  test_api-leak.cpp  test_api-string_api.cpp  test_api-tref_api.cpp
tests/benchmark/: CMakeLists.txt  test_benchmark-cvc5.cpp  test_benchmark-helper.h  test_benchmark-interpreter.cpp  test_benchmark-wff_normalization.cpp
tests/codegen_specs/: always_one.tau  conjunction_of_g.tau  echo.tau
tests/experimental/: CMakeLists.txt  test_experimental_execution.cpp
tests/integration/: CMakeLists.txt  parser_helper.h  test_integration-ba_types_inference.cpp  test_integration-bdd1.cpp  test_integration-bdd2.cpp  test_integration-bf_fixed_point.cpp  test_integration-bf_hooks.cpp  test_integration-bf_normalization.cpp  test_integration-blasting_correctness_check.cpp  test_integration-blasting_correctness_check.helper.h  test_integration-blasting_correctness_check1.cpp  test_integration-blasting_correctness_check2.cpp  test_integration-blasting_correctness_check3.cpp  test_integration-blasting_correctness_check4.cpp  test_integration-blasting_correctness_check5.cpp  test_integration-bv_hooks.cpp  test_integration-ctl_star.cpp  test_integration-executor.cpp  test_integration-gssotc_rr_execution.cpp  test_integration-gssotc_rr_partial_eval.cpp  test_integration-heuristics-ba_bv_custom_simplification.cpp  test_integration-heuristics-ba_bv_cvc5_simplification.cpp  test_integration-heuristics-bv_ba_custom_simplification.cpp  test_integration-heuristics-bv_ba_cvc5_simplification.cpp  test_integration-heuristics-bv_bitblasting.cpp  test_integration-heuristics-bv_bitblasting_predicates.cpp  test_integration-heuristics-bv_predicate_blasting.cpp  test_integration-heuristics-bv_predicate_blasting_predicates.cpp  test_integration-heuristics-ex_subs_based_elimination.cpp  test_integration-heuristics-simplify_using_equality.cpp  test_integration-heuristics-syntactic_path_simplification.cpp  test_integration-interpreter.cpp  (+42 more)
(+515 files in other folders)
